--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,25 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceSets {
+
+    main {
+        java {
+            srcDir 'src'
+        }
+        resources{
+            srcDir 'src'
+        }
+
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'Calculadora'
+    }
+}
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
